--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Unidecode==1.3.4
-simplejson==3.17.6 
-supabase==0.5.7
-storage3==0.3.4
-Flask==2.2.2 
+django>=4.0,<5.0
+gunicorn>=20.0,<21.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
+psycopg2>=2.0,<3.0
